--- a/popup.html
+++ b/popup.html
@@ -28,7 +28,7 @@
  </div>
 <div class="container">
 <div class="score">
- <h4 align="left">SCORE: </h4>
+ <h4 align="left">SCORE: 3.3</h4>
 </div>  </div>
    <table align="center" id="table">
  
